[tool.poetry]
name = "debate"
version = "0.1.0"
description = "AI-to-AI debate system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
requests = "^2.32.3"
replicate = "^1.0.2"
python-dotenv = "^1.0.0"
Pillow = "11.1.0"
pyqt6 = "^6.10.0"
openai = "^2.8.1"
anthropic = "^0.75.0"
together = "^1.5.30"
networkx = "3.4.2"
beautifulsoup4 = "^4.14.2"
gradio = "^6.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

